# mcu

./: .gitignore  .gitmodules  .travis.yml  .valgrind.supp  CMakeLists.txt  Dockerfile.dev  Dockerfile.tests  LICENSE  Makefile  README.md  SECURITY.md  Vagrantfile  aes.c  aes.h  arm.cmake  ataes132.c  ataes132.h  base58.c  base64.c  base64.h  bignum.c  bignum.h  bip32.c  bip32.h  bip39.c  bip39.h  bip39_english.h  bootloader.ld  commander.c  commander.h  dockerdev.sh  ecdsa.c  ecdsa.h  firmware.cmake  firmware.ld  flags.h  hidapi.h  hmac.c  jsmn.c  jsmn.h  (+43 more)
contrib/: README.md  (+3 more)
src/: CMakeLists.txt  aes.c  aes.h  aescbcb64.c  aescbcb64.h  asm_arm.inc  ataes132.c  ataes132.h  base58.c  base64.c  base64.h  bip32.c  bip32.h  bip39_english.h  board_com.c  board_com.h  bootloader.c  bootloader.h  cipher.c  cipher.h  commander.c  commander.h  curve-specific.inc  ecc.c  ecc.h  ecc_bitcoin.c  ecdh.c  ecdh.h  firmware.c  flags.c  flags.h  flash.c  flash.h  hidapi.h  hmac.c  hmac.h  hw_version.c  hw_version.h  jsmn.c  jsmn.h  (+47 more)
src/drivers/: README.md
src/drivers/common/boards/: board.h
src/drivers/common/boards/user_board/: init.c  user_board.h
src/drivers/common/components/memory/sd_mmc/: sd_mmc.c  sd_mmc.h  sd_mmc_mem.c  sd_mmc_mem.h  sd_mmc_protocol.h  sd_mmc_spi.c  sd_mmc_spi.h
src/drivers/common/services/clock/: genclk.h  osc.h  pll.h  sysclk.h
src/drivers/common/services/clock/sam4s/: genclk.h  osc.h  pll.h  sysclk.c  sysclk.h
src/drivers/common/services/delay/: delay.h
src/drivers/common/services/delay/sam/: cycle_counter.c  cycle_counter.h
src/drivers/common/services/gpio/: gpio.h
src/drivers/common/services/ioport/: ioport.h
src/drivers/common/services/ioport/sam/: ioport_pio.h
src/drivers/common/services/serial/: serial.h  usart_serial.c
src/drivers/common/services/serial/sam_uart/: uart_serial.h
src/drivers/common/services/sleepmgr/sam/: sleepmgr.c  sleepmgr.h
src/drivers/common/services/spi/: spi_master.h
src/drivers/common/services/spi/sam_spi/: spi_master.c  spi_master.h
src/drivers/common/services/storage/ctrl_access/: ctrl_access.c  ctrl_access.h
src/drivers/common/services/twi/: twi_master.h  twi_slave.h
src/drivers/common/services/twi/sam_twi/: twi_master.h  twi_slave.h
src/drivers/common/services/usb/class/composite/device/: udi_composite_desc.c
src/drivers/common/services/usb/class/hid/device/: udi_hid.c
src/drivers/common/services/usb/class/hid/device/dbg/: udi_hid_dbg.c  udi_hid_dbg.h
src/drivers/common/services/usb/class/hid/device/generic/: udi_hid_generic.c  udi_hid_generic.h  udi_hid_generic_desc.c
src/drivers/common/utils/stdio/stdio_serial/: stdio_serial.h
src/drivers/config/: conf_access.h  conf_board.h  conf_clock.h  conf_fatfs.h  conf_sd_mmc.h  conf_sleepmgr.h  conf_spi_master.h  conf_uart_serial.h  conf_usb.h  mcu.h  touch_qt_config.h
src/drivers/sam/drivers/efc/: efc.c  efc.h
src/drivers/sam/drivers/pio/: pio.c  pio.h  pio_handler.c  pio_handler.h
src/drivers/sam/drivers/pmc/: pmc.c  pmc.h  sleep.c  sleep.h
src/drivers/sam/drivers/rtc/: rtc.c  rtc.h
src/drivers/sam/drivers/spi/: spi.c  spi.h
src/drivers/sam/drivers/twi/: twi.c  twi.h
src/drivers/sam/drivers/uart/: uart.c  uart.h
src/drivers/sam/drivers/udp/: udp_device.c  udp_device.h
src/drivers/sam/drivers/usart/: usart.c  usart.h
src/drivers/sam/drivers/wdt/: wdt.c  wdt.h
src/drivers/sam/services/flash_efc/: flash_efc.c  flash_efc.h
src/drivers/sam/utils/: compiler.h  status_codes.h
src/drivers/sam/utils/cmsis/sam4s/include/: sam4s.h  sam4s16b.h  sam4s16c.h  sam4s2a.h  sam4s2b.h  sam4s2c.h  sam4s4a.h  sam4s4b.h  sam4s4c.h  sam4s8b.h  sam4s8c.h  sam4sa16b.h  sam4sa16c.h  sam4sd16b.h  sam4sd16c.h  sam4sd32b.h  sam4sd32c.h  system_sam4s.h
src/drivers/sam/utils/cmsis/sam4s/include/component/: component_acc.h  component_adc.h  component_chipid.h  component_cmcc.h  component_crccu.h  component_dacc.h  component_efc.h  component_gpbr.h  component_hsmci.h  component_matrix.h  component_pdc.h  component_pio.h  component_pmc.h  component_pwm.h  component_rstc.h  component_rtc.h  component_rtt.h  component_smc.h  component_spi.h  component_ssc.h  component_supc.h  component_tc.h  component_twi.h  component_uart.h  component_udp.h  component_usart.h  component_wdt.h
src/drivers/sam/utils/cmsis/sam4s/include/instance/: instance_acc.h  instance_adc.h  instance_chipid.h  instance_cmcc.h  instance_crccu.h  instance_dacc.h  instance_efc0.h  instance_efc1.h  instance_gpbr.h  instance_hsmci.h  instance_matrix.h  instance_pioa.h  instance_piob.h  instance_pioc.h  instance_pmc.h  instance_pwm.h  instance_rstc.h  instance_rtc.h  instance_rtt.h  instance_smc.h  instance_spi.h  instance_ssc.h  instance_supc.h  instance_tc0.h  instance_tc1.h  instance_twi0.h  instance_twi1.h  instance_uart0.h  instance_uart1.h  instance_udp.h  instance_usart0.h  instance_usart1.h  instance_wdt.h
src/drivers/sam/utils/cmsis/sam4s/include/pio/: pio_sam4s16b.h  pio_sam4s16c.h  pio_sam4s2a.h  pio_sam4s2b.h  pio_sam4s2c.h  pio_sam4s4a.h  pio_sam4s4b.h  pio_sam4s4c.h  pio_sam4s8b.h  pio_sam4s8c.h  pio_sam4sa16b.h  pio_sam4sa16c.h  pio_sam4sd16b.h  pio_sam4sd16c.h  pio_sam4sd32b.h  pio_sam4sd32c.h
src/drivers/sam/utils/cmsis/sam4s/source/templates/: system_sam4s.c
src/drivers/sam/utils/header_files/: io.h
src/drivers/sam/utils/syscalls/gcc/: syscalls.c
src/u2f/: genkeys.sh  u2f.h  u2f_hid.h  u2f_keys.h
src/yajl/: yajl.c  yajl_alloc.c  yajl_alloc.h  yajl_buf.c  yajl_buf.h  yajl_bytestack.h  yajl_encode.c  yajl_encode.h  yajl_gen.c  yajl_lex.c  yajl_lex.h  yajl_parser.c  yajl_parser.h  yajl_tree.c  yajl_version.c
src/yajl/api/: yajl_common.h  yajl_gen.h  yajl_parse.h  yajl_tree.h
tests/: CMakeLists.txt  api.h  generate_base64_testcases.py  hmac_check.h  tests_api.c  tests_cmdline.c  tests_cmdline_live.c  tests_openssl.c  tests_secp256k1.c  tests_u2f_hid.c  tests_u2f_standard.c  tests_unit.c  tests_yajl.c  utest.h
tests/u2f/: u2f_hid_t.h  u2f_t.h  u2f_util_t.c  u2f_util_t.h
tests/u2f/libmincrypt/: dsa_sig.c  p256.c  p256_ec.c  p256_ecdsa.c  rsa.c  sha.c  sha256.c
(+27 files in other folders)
