#-----------------------------------------------------------------------------
# CmakeLists.txt for the Digital Bitbox
# Copyright (c) 2015-2016 Lucas Betschart, Douglas J. Bakkum
# MIT License


include_directories(../src)
if(NOT USE_UECC_LIB)
    include_directories(../src/secp256k1)
    include_directories(../src/secp256k1/src)
endif()

#-----------------------------------------------------------------------------
# Build tests_unit
add_executable(tests_unit tests_unit.c)
target_link_libraries(tests_unit bitbox)


#-----------------------------------------------------------------------------
# Build tests_openssl
find_package(OpenSSL REQUIRED)
include_directories(${OPENSSL_INCLUDE_DIR})
add_executable(tests_openssl tests_openssl.c)
target_link_libraries(tests_openssl bitbox ${OPENSSL_LIBRARIES})


#-----------------------------------------------------------------------------
# Build tests_cmdline
add_executable(tests_cmdline tests_cmdline.c)
target_link_libraries(tests_cmdline bitbox)


#-----------------------------------------------------------------------------
# Build tests_cmdline_live
if(NOT CONTINUOUS_INTEGRATION)
    find_library(HIDAPI_LIBRARY
        NAMES hidapi hidapi-libusb)

    find_path(HIDAPI_INCLUDE_DIR
        NAMES hidapi.h
        PATH_SUFFIXES
        hidapi)

    if(!HIDAPI_FOUND)
        message(FATAL_ERROR "hidapi not found.")
    endif()
    include_directories(${HIDAPI_INCLUDE_DIR})
    add_executable(tests_cmdline_live tests_cmdline_live.c)
    target_link_libraries(tests_cmdline_live bitbox ${HIDAPI_LIBRARY})
endif()



#-----------------------------------------------------------------------------
# Build secp256k1 submodule tests
if(NOT USE_UECC_LIB)
    add_executable(tests_secp256k1 tests_secp256k1.c)
    target_link_libraries(tests_secp256k1 bitbox)
endif()

#-----------------------------------------------------------------------------
# Build yajl submodule tests
add_executable(tests_yajl tests_yajl.c)
target_link_libraries(tests_yajl bitbox)


#-----------------------------------------------------------------------------
# Build tests_api

if(WIN32)
  include_directories(windows/hidapi/hidapi)
  set(HIDAPI-SOURCES
      windows/hidapi/windows/hid.c
  )
  #Disable all the warnings generated by the HID library
  set_source_files_properties( ${HIDAPI-SOURCES} PROPERTIES
          COMPILE_FLAGS "-w")

  add_library(hidapi
          STATIC
          ${HIDAPI-SOURCES}
  )
else()
    if(NOT CONTINUOUS_INTEGRATION)
        find_library(HIDAPI_LIBRARY
            NAMES hidapi hidapi-libusb)

        find_path(HIDAPI_INCLUDE_DIR
            NAMES hidapi.h
            PATH_SUFFIXES
            hidapi)

        if(!HIDAPI_FOUND)
            message(FATAL_ERROR "hidapi not found.")
        endif()
        include_directories(${HIDAPI_INCLUDE_DIR})
    endif()
endif()

add_executable(tests_api tests_api.c ${WINDOWS-SOURCES})

if(NOT CONTINUOUS_INTEGRATION)
    if(WIN32)
        target_link_libraries(tests_api bitbox hidapi)
    else()
        target_link_libraries(tests_api bitbox ${HIDAPI_LIBRARY})
    endif()
else()
    target_link_libraries(tests_api bitbox)
endif()

